--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "url": "https://github.com/kevintongg/oyasumi/issues"
   },
   "homepage": "https://github.com/kevintongg/oyasumi#readme",
+  "apps": [
+    {
+      "node_args": "--harmony"
+    }
+  ],
   "dependencies": {
     "discord.js": "^11.1.0",
     "discord.js-commando": "^0.9.0",
